문제수정과 프림알고리즘 수정

--- a/_posts/2020-3-13-프로그래머스(K번째 수).md
+++ b/_posts/2020-3-13-프로그래머스(K번째 수).md
@@ -1,1 +1,31 @@
+---
+layout: post
+title: 프로그래머스 - 정렬 - K번째수
+---
+
+
 # 문제
+<img width="702" alt="스크린샷 2020-04-18 오후 10 09 05" src="https://user-images.githubusercontent.com/37113547/79638604-513f5e00-81c1-11ea-8c0c-9edaac9327aa.png">
+
+# 입력
+<img width="702" alt="스크린샷 2020-04-18 오후 10 09 12" src="https://user-images.githubusercontent.com/37113547/79638605-53092180-81c1-11ea-904b-1776bb88fd20.png">
+
+-----
+### 나의 처음 코드
+> 사실 정렬 관련한 문제는 정렬 하나로만 나오기보다는, 정렬에 dfs/bfs 등 다른 알고리즘들과 함께 섞어서 나오는 문제들이 많은 것 같다. 이 문제는 정렬 하나만 요구하기 때문에, list 슬라싱과 sort에 대해서 이해가 많은 사람들이라면 어렵지 않게 풀수 있는 문제이다. 코드는 다음과 같다.
+-----
+
+~~~python
+def solution(array, commands):
+answer = []
+for i in range(0, len(commands)):
+    tmp = array[(commands[i][0]-1) : (commands[i][1])]
+    tmp.sort()
+    answer.append(tmp[commands[i][2] - 1])   
+return answer
+~~~
+
+-----
+
+> 굳이 설명안해도 알죠?
+
