--- a/_posts/2020-3-15-프림 알고리즘.md
+++ b/_posts/2020-3-15-프림 알고리즘.md
@@ -1,6 +1,8 @@
-#프림 알고리즘
-#시작점 부터 시작해서, 지금 당장 연결된 선중에서 최소인 것을 찾는다.
+# 프림 알고리즘
 
+# 시작점 부터 시작해서, 지금 당장 연결된 선중에서 최소인 것을 찾는다.
+
+~~~python
 input_graph = [[0,0,0,0,0,0],
                [0,0,1,3,999,999],
                [0,1,0,3,6,999],
@@ -39,21 +41,21 @@ def prim_algorithm(input_graph : list()):
     return total_weight
 
 print(prim_algorithm(input_graph))
-    
-    
-    
-    
-
-
-
-
-
-
-
-
 #   1 2 3 4 5 
 # 1 0 1 3 -1 -1
 # 2 1 0 3 6 -1
 # 3 3 3 0 4 2
 # 4 -1 6 4 0 5
 # 5 -1 -1 2 5 0
+~~~
+    
+    
+
+
+
+
+
+
+
+
+
