--- a/_posts/2020-3-16-프로그래머스(H-Index).md
+++ b/_posts/2020-3-16-프로그래머스(H-Index).md
@@ -1,1 +1,45 @@
+---
+layout: post
+title: 프로그래머스 - 정렬 - H Index
+---
+
+
 # 문제
+<img width="795" alt="스크린샷 2020-04-18 오후 10 30 02" src="https://user-images.githubusercontent.com/37113547/79639228-57373e00-81c5-11ea-8901-01350f0cbe7c.png">
+
+# 입력
+<img width="795" alt="스크린샷 2020-04-18 오후 10 30 11" src="https://user-images.githubusercontent.com/37113547/79639230-57cfd480-81c5-11ea-9547-f8ad5f24c009.png">
+
+-----
+### 나의 처음 코드
+> 이 문제는 어려운 것 처럼 보이지만, 문제는 ***h편 이상 인용된 것이 h개*** 에 집중하고 있으므로 우리는 니즈에 맞춰주면 된다. 주어진 리스트의 원소에 접근하되, 그 원소의 값과 지금까지 세어진 원소의 갯수와 비교하면 된다. 그러다가 원소의 갯수가 원소의 값보다 커지는 순간, 크기를 하나씩 늘려가며 최적의 값을 찾아내면 된다.
+-----
+
+~~~python
+def solution(citations):
+answer = 0
+citations.sort()
+citations.reverse()
+
+if len(citations) == 1:
+    if citations[0] == 0:
+        return 0
+    else:
+        return 1
+
+for i in range(len(citations)):
+    num = citations[i]
+    if num <= i + 1:
+        while True:
+            if num < i:
+                num += 1
+            else:
+                return num
+            
+return len(citations)
+~~~
+
+-----
+
+> little bit picky한 문제이다. 테케를 항상 생각해보고 코딩을 해야할 것 같다. 예외에 관해서 매우 민감해져야 할 것 같다..
+
