--- a/_posts/2020-5-04-백준 14891(톱니바퀴).md
+++ b/_posts/2020-5-04-백준 14891(톱니바퀴).md
@@ -1,79 +1,80 @@
 ---
 layout: post
-title: BAEKJOON 14501
+title: BAEKJOON 14891
 ---
 
 # 문제
 <div>
-<img width="1183" alt="스크린샷 2020-05-03 오후 10 06 52" src="https://user-images.githubusercontent.com/37113547/80915061-94d1c480-8d8a-11ea-929e-93a27b7b947f.png">
-<img width="1183" alt="스크린샷 2020-05-03 오후 10 06 59" src="https://user-images.githubusercontent.com/37113547/80915062-956a5b00-8d8a-11ea-9d5d-513125d9def2.png">
+<img width="1183" alt="스크린샷 2020-05-05 오전 11 45 51" src="https://user-images.githubusercontent.com/37113547/81031118-2a25a380-8ec6-11ea-902a-43a99039d519.png">
+<img width="1183" alt="스크린샷 2020-05-05 오전 11 46 01" src="https://user-images.githubusercontent.com/37113547/81031119-2abe3a00-8ec6-11ea-8f7a-f48c59fc3968.png">
+<img width="1183" alt="스크린샷 2020-05-05 오전 11 46 08" src="https://user-images.githubusercontent.com/37113547/81031120-2b56d080-8ec6-11ea-8c30-30cd10365e51.png">
 </div>
 
 # 입력
-<img width="1183" alt="스크린샷 2020-05-03 오후 10 07 05" src="https://user-images.githubusercontent.com/37113547/80915065-969b8800-8d8a-11ea-8931-4efab006a8f5.png">
+<img width="1183" alt="스크린샷 2020-05-05 오전 11 46 17" src="https://user-images.githubusercontent.com/37113547/81031121-2c87fd80-8ec6-11ea-855d-0dd2e245d899.png">
 
 -----
 
 ### 나의 처음 코드
 
-> 내가 문제를 푼 방식은 바로 백트래킹 + 브루트 포스로 해결하였다. 바이러스가 퍼지고 퍼지지 않은 공간의 최댓값을 구하면 된다. 그래서 빈칸의 좌표를 따로 저장한 후에, 벽을 세울 수 있는 모든 경우의 수를 for문으로 돌려준다. 벽이 3개가 추가된 맵을 바탕으로 bfs형식으로 풀면된다. 여기서 벽을 3개 추가하고 추가를 해제하는 방법에 대햇서 백트래킹 방법을 썼다. 코드는 다음과 같다.
+> 이 문제를 봤을 때, 왜인지 이진수 shift로 푸는 문제같아서 그 방법으로 풀어봤다. 내가 아직 방법이 부족한거인지는 몰라도, 왼쪽으로 톱니바퀴가 돌 때는 왼쪽으로 한칸씩 shift하고 1을 더해주면 됐었다. 그런데 오른쪽으로 쉬프트할 때는, 0이 추가될 때는 0110이 110으로 인식되어서 문제를 일으켰다. 그래서 에라잇 그냥 원래 풀던방법으로 풀자 해서 평범하게 풀었다. 우선 여기 문제에서는 지정한 톱니바퀴가 돌 때 양 옆에 있는 톱니바퀴와 비교를 해서 극이 2번 톱니와 6번 톱니가 극이 같으면 옆에 있는 톱니바퀴는 돌지 않고, 극이 다르면 톱니가 돌기 시작한다. 예를 들어 2번 톱니를 지정해서 시계방향으로 돌리는데, 인접한 1번 톱니와 극이 같으면 1번 톱니바퀴는 회전을 하지 않는다. 만약 인접한 3번 톱니바퀴와 극이 다르면, 3번 톱니바퀴는 2번 톱니바퀴와 반대 방향으로 회전을 하게 되는 것이다. 내가 푼 방식은 특정 톱니바퀴를 돌리라는 오더가 있으면, 특정 톱니바퀴에서 양방향으로 극이 같은지/다른지 인덱스를 증가하면서 확인하는 것이다. 그리고 revolve라는 함수를 통해서 오른쪽 shift, 왼쪽 shift를 구현하였다. 코드는 다음과 같다.
 
 ~~~python
-N, M = list(map(int, input().split()))
-wall_coord = []
-virus_coord = []
-map_list = []
-#벽 좌표, 바이러스 좌표, 맵 입력 받기
-for i in range(N):
-    tmp_list = list(map(int, input().split()))
-    for j in range(M):
-        if tmp_list[j] == 0:
-            wall_coord.append((i,j))
-        if tmp_list[j] == 2:
-            virus_coord.append((i,j))
-    map_list.append(tmp_list)
+roll_status = []
+rev_list = []
+#이진수 형태로 변환해서 리스트에 삽입
+for i in range(4):
+    roll_status.append(input())
+    
+numOfrev = int(input())
+for i in range(numOfrev):
+    rev_list.append(tuple(map(int, input().split())))
+#immutable로 만들려고 tuple로 오랜만에 만들었는데, tuple에는 append가 없다.
+
+def revolve(status, way):
+    #way = 1이면 시계, -1이면 반시계
+    if way == 1:
+        if status[-1] == '1':
+            status = '1' + status[0:-1]
+        else:
+            status = '0' + status[0:-1]
+    #멍청하게 else로 해서 0까지 -1역핧을 해버림;;
+    elif way == -1:
+        if status[0] == '1':
+            status = status[1:] + '1'
+        else:
+            status = status[1:] + '0'
+    return status
         
-max_space = -1
-#오른 아래 왼 위
-ud_list = [0, 1, 0, -1]
-rl_list = [1, 0, -1, 0]
-
-#브루트 포스 찾기
-def solution(virus_list):
-    cnt = 0
-    visited_list = [[0] * M for _ in range(N)]
-    while True:
-        tmp_list = []
-        for virus in virus_list:
-            for i in range(4):
-                new_x = virus[0] + ud_list[i]
-                new_y = virus[1] + rl_list[i]
-                if 0 <= new_x < N and 0 <= new_y < M and visited_list[new_x][new_y] == 0 and map_list[new_x][new_y] == 0:
-                    cnt += 1
-                    tmp_list.append((new_x, new_y))
-                    visited_list[new_x][new_y] = 1
-        virus_list = tmp_list
-        if len(virus_list) == 0:
-            #벽 3개를 세우고 solution들어왔으므로 -3 해줘야 한다
-            return len(wall_coord) - 3 - cnt
-     
-     
-#백트래킹 + 브루트포스 문제.                      
-for i in range(len(wall_coord)-2):
-    map_list[wall_coord[i][0]][wall_coord[i][1]] = 1
-    for j in range(i+1,len(wall_coord)-1):
-        map_list[wall_coord[j][0]][wall_coord[j][1]] = 1
-        for k in range(j+1, len(wall_coord)):
-            map_list[wall_coord[k][0]][wall_coord[k][1]] = 1
-            #벽 세기
-            ret_cnt = solution(virus_coord)
-            max_space = ret_cnt if max_space < ret_cnt else max_space
-            
-            map_list[wall_coord[k][0]][wall_coord[k][1]] = 0
-        map_list[wall_coord[j][0]][wall_coord[j][1]] = 0
-    map_list[wall_coord[i][0]][wall_coord[i][1]] = 0
-            
-
-print(max_space)
+        
+for info in rev_list:
+    nth, way = info
+    way_list = [0] * 4
+    way_list[nth-1] = way
+    #왼쪽으로    6  2
+    for i in range(nth-1, 0, -1):
+        #같은 극일 때
+        if roll_status[i][6] == roll_status[i-1][2]:
+            break
+        else:
+            way_list[i-1] = way_list[i] * -1    
+    #오른쪽으로
+    for i in range(nth-1, 3):
+        #같은 극일 때
+        if roll_status[i][2] == roll_status[i+1][6]:
+            break
+        else:
+            way_list[i+1] = way_list[i] * -1
+    
+    for i in range(4):
+        roll_status[i] = revolve(roll_status[i], way_list[i])
+    
+    
+score = 0
+for i in range(4):
+    if roll_status[i][0] == '1':
+        score += 2**i
+    
+print(score)
 ~~~
->> 코드를 짧게 만들고 싶었지만, 시간을 줄이기위해서 ,,,, ㅎㅎ
+>> 바보같은 실수만 줄인다면, 더 성장할 수 있을 것이다.... 제발....꼼꼼히...
