튜플 문제 수정

--- a/_posts/2020-5-06-프로그래머스(튜플).md
+++ b/_posts/2020-5-06-프로그래머스(튜플).md
@@ -1,80 +1,47 @@
 ---
 layout: post
-title: BAEKJOON 14891
+title: 프로그래머스 - 2019 카카오 개발자 겨울 인턴십 - 튜플
 ---
+
 
 # 문제
 <div>
-<img width="1183" alt="스크린샷 2020-05-05 오전 11 45 51" src="https://user-images.githubusercontent.com/37113547/81031118-2a25a380-8ec6-11ea-902a-43a99039d519.png">
-<img width="1183" alt="스크린샷 2020-05-05 오전 11 46 01" src="https://user-images.githubusercontent.com/37113547/81031119-2abe3a00-8ec6-11ea-8f7a-f48c59fc3968.png">
-<img width="1183" alt="스크린샷 2020-05-05 오전 11 46 08" src="https://user-images.githubusercontent.com/37113547/81031120-2b56d080-8ec6-11ea-8c30-30cd10365e51.png">
+<img width="810" alt="스크린샷 2020-05-07 오전 12 00 00" src="https://user-images.githubusercontent.com/37113547/81193016-db772700-8ff5-11ea-9f03-0d7ef5a474db.png">
+<img width="810" alt="스크린샷 2020-05-07 오전 12 00 13" src="https://user-images.githubusercontent.com/37113547/81193020-dca85400-8ff5-11ea-93b9-fb4d437fb32a.png">
 </div>
 
 # 입력
-<img width="1183" alt="스크린샷 2020-05-05 오전 11 46 17" src="https://user-images.githubusercontent.com/37113547/81031121-2c87fd80-8ec6-11ea-855d-0dd2e245d899.png">
+<img width="810" alt="스크린샷 2020-05-07 오전 12 00 17" src="https://user-images.githubusercontent.com/37113547/81193027-dd40ea80-8ff5-11ea-9adb-4b5a8cfd6b80.png">
 
 -----
-
 ### 나의 처음 코드
-
-> 이 문제를 봤을 때, 왜인지 이진수 shift로 푸는 문제같아서 그 방법으로 풀어봤다. 내가 아직 방법이 부족한거인지는 몰라도, 왼쪽으로 톱니바퀴가 돌 때는 왼쪽으로 한칸씩 shift하고 1을 더해주면 됐었다. 그런데 오른쪽으로 쉬프트할 때는, 0이 추가될 때는 0110이 110으로 인식되어서 문제를 일으켰다. 그래서 에라잇 그냥 원래 풀던방법으로 풀자 해서 평범하게 풀었다. 우선 여기 문제에서는 지정한 톱니바퀴가 돌 때 양 옆에 있는 톱니바퀴와 비교를 해서 극이 2번 톱니와 6번 톱니가 극이 같으면 옆에 있는 톱니바퀴는 돌지 않고, 극이 다르면 톱니가 돌기 시작한다. 예를 들어 2번 톱니를 지정해서 시계방향으로 돌리는데, 인접한 1번 톱니와 극이 같으면 1번 톱니바퀴는 회전을 하지 않는다. 만약 인접한 3번 톱니바퀴와 극이 다르면, 3번 톱니바퀴는 2번 톱니바퀴와 반대 방향으로 회전을 하게 되는 것이다. 내가 푼 방식은 특정 톱니바퀴를 돌리라는 오더가 있으면, 특정 톱니바퀴에서 양방향으로 극이 같은지/다른지 인덱스를 증가하면서 확인하는 것이다. 그리고 revolve라는 함수를 통해서 오른쪽 shift, 왼쪽 shift를 구현하였다. 코드는 다음과 같다.
+> 문자열 파씽문제이다. 주어진 문자열을 규칙에 맞게 파씽한다음에 우리가 원하는 문자열만 추출해오면 된다! 코드는 다음과 같다!!! (카카오 코테 준비하느라 정신없으니 설명과 팁은 간단히 하겠따!)
+-----
 
 ~~~python
-roll_status = []
-rev_list = []
-#이진수 형태로 변환해서 리스트에 삽입
-for i in range(4):
-    roll_status.append(input())
-    
-numOfrev = int(input())
-for i in range(numOfrev):
-    rev_list.append(tuple(map(int, input().split())))
-#immutable로 만들려고 tuple로 오랜만에 만들었는데, tuple에는 append가 없다.
+def solution(s):
+answer = 
+string = s[1:len(s)-1].replace('},', '}-').split("-")
+string = sorted([item[1:len(item)-1] for item in string], key= lambda x : len(x))
+flag = True
+for item in string:
+    if flag:
+        flag = False
+        answer.append(int(item))
+    else:
+        for item2 in item.split(','):
+            if int(item2) not in answer:
+                answer.append(int(item2))
 
-def revolve(status, way):
-    #way = 1이면 시계, -1이면 반시계
-    if way == 1:
-        if status[-1] == '1':
-            status = '1' + status[0:-1]
-        else:
-            status = '0' + status[0:-1]
-    #멍청하게 else로 해서 0까지 -1역핧을 해버림;;
-    elif way == -1:
-        if status[0] == '1':
-            status = status[1:] + '1'
-        else:
-            status = status[1:] + '0'
-    return status
-        
-        
-for info in rev_list:
-    nth, way = info
-    way_list = [0] * 4
-    way_list[nth-1] = way
-    #왼쪽으로    6  2
-    for i in range(nth-1, 0, -1):
-        #같은 극일 때
-        if roll_status[i][6] == roll_status[i-1][2]:
-            break
-        else:
-            way_list[i-1] = way_list[i] * -1    
-    #오른쪽으로
-    for i in range(nth-1, 3):
-        #같은 극일 때
-        if roll_status[i][2] == roll_status[i+1][6]:
-            break
-        else:
-            way_list[i+1] = way_list[i] * -1
-    
-    for i in range(4):
-        roll_status[i] = revolve(roll_status[i], way_list[i])
-    
-    
-score = 0
-for i in range(4):
-    if roll_status[i][0] == '1':
-        score += 2**i
-    
-print(score)
+return answer
 ~~~
->> 바보같은 실수만 줄인다면, 더 성장할 수 있을 것이다.... 제발....꼼꼼히...
+
+> 내가 문자열 파씽한 방법은 replace함수와 split함수로 했다. 아, 그리고 slice도 해서 원하는 부분만 얻어왔다. 추출만 해오면 포문으로 돌려주면 된다. 파씽하는 다른 방법을 팁으로 알고 있자!!! 코드는 다음과 같다.
+
+~~~python
+string = s.lstrip('{').rstrip('}').split('},{')
+string = [item.split(',') for item in string]
+~~~
+
+> lstrip과 rstrip은 말 그대로, 오른/왼쪽을 벗겨내는 것이다. 그리고 규칙을 가진 문자열을 파씽해서 원하는 부분만 추출해오는 과정이다!!! 기억해두자!
+
