--- a/_posts/2020-9-08-프로그래머스 (자물쇠와 열쇠).md
+++ b/_posts/2020-9-08-프로그래머스 (자물쇠와 열쇠).md
@@ -3,45 +3,79 @@ layout: post
 title: 프로그래머스 - 2019 카카오 개발자 겨울 인턴십 - 튜플
 ---
 
-
 # 문제
+
 <div>
-<img width="810" alt="스크린샷 2020-05-07 오전 12 00 00" src="https://user-images.githubusercontent.com/37113547/81193016-db772700-8ff5-11ea-9f03-0d7ef5a474db.png">
-<img width="810" alt="스크린샷 2020-05-07 오전 12 00 13" src="https://user-images.githubusercontent.com/37113547/81193020-dca85400-8ff5-11ea-93b9-fb4d437fb32a.png">
+<img width="1079" alt="스크린샷 2020-09-08 오후 11 59 40" src="https://user-images.githubusercontent.com/37113547/92493422-73e51880-f22f-11ea-8ff7-0776584040cf.png">
 </div>
 
 # 입력
-<img width="810" alt="스크린샷 2020-05-07 오전 12 00 17" src="https://user-images.githubusercontent.com/37113547/81193027-dd40ea80-8ff5-11ea-9adb-4b5a8cfd6b80.png">
 
------
+<img width="531" alt="스크린샷 2020-09-08 오후 11 59 49" src="https://user-images.githubusercontent.com/37113547/92493425-747daf00-f22f-11ea-904e-555ae25db651.png">
+
+---
+
 ### 나의 처음 코드
-> 문자열 파씽문제이다. 주어진 문자열을 규칙에 맞게 파씽한다음에 우리가 원하는 문자열만 추출해오면 된다! 코드는 다음과 같다!!! (카카오 코테 준비하느라 정신없으니 설명과 팁은 간단히 하겠따!)
------
 
-~~~python
-def solution(s):
-answer = 
-string = s[1:len(s)-1].replace('},', '}-').split("-")
-string = sorted([item[1:len(item)-1] for item in string], key= lambda x : len(x))
-flag = True
-for item in string:
-    if flag:
-        flag = False
-        answer.append(int(item))
-    else:
-        for item2 in item.split(','):
-            if int(item2) not in answer:
-                answer.append(int(item2))
+> 좌표를 회전시키는 방법과 열쇠를 옮겨가면서, 자물쇠와의 일치여부를 확인해주어야 한다.
 
-return answer
-~~~
+---
 
-> 내가 문자열 파씽한 방법은 replace함수와 split함수로 했다. 아, 그리고 slice도 해서 원하는 부분만 얻어왔다. 추출만 해오면 포문으로 돌려주면 된다. 파씽하는 다른 방법을 팁으로 알고 있자!!! 코드는 다음과 같다.
+# 풀이 사진
 
-~~~python
-string = s.lstrip('{').rstrip('}').split('},{')
-string = [item.split(',') for item in string]
-~~~
+![개발-131](https://user-images.githubusercontent.com/37113547/92493453-7d6e8080-f22f-11ea-9375-f4879961bea0.jpg)
 
-> lstrip과 rstrip은 말 그대로, 오른/왼쪽을 벗겨내는 것이다. 그리고 규칙을 가진 문자열을 파씽해서 원하는 부분만 추출해오는 과정이다!!! 기억해두자!
+```python
+def rotate(arr, ith, m):
+    if ith == 0:
+        return arr
+    dx = []
+    dy = []
+    new_arr = []
+    for pos in arr:
+        if ith == 1:
+            new_arr.append((pos[1], m - pos[0] - 1))
+        elif ith == 2:
+            new_arr.append((m - pos[0] - 1, m - pos[1] - 1))
+        else:
+            new_arr.append((m - pos[1] - 1, pos[0]))
+    return new_arr
 
+
+def solution(key, lock):
+    answer = True
+    key_list = []
+    lock_dict = {}
+    lock_set = set()
+    all_set = set()
+    M = len(key)
+    N = len(lock)
+
+    for i in range(N):
+        for j in range(N):
+            all_set.update({(M - 1 + i, M - 1 + j)})
+            if lock[i][j] == 0:
+                lock_set.update({(M - 1 + i, M - 1 + j)})
+    for i in range(M):
+        for j in range(M):
+            if key[i][j] == 1:
+                key_list.append((i, j))
+    key_dict = set()
+    for ith in range(1, 4):
+        new_arr = rotate(key_list, ith, M)
+        for i in range(M + N):
+            for j in range(M + N):
+                for x, y in new_arr:
+                    key_dict.update({(x + i, y + j)})
+                if all_set.intersection(key_dict) == lock_set:
+                    return True
+                key_dict.clear()
+    return False
+```
+
+> set에 여러 데이터를 update하기 위해서는 {} 로 묶어줘야 원하는 방향으로 작동을 한다.
+
+```python
+key_dict.update((x + i, y + j)) #둘이 같을 경우 하나만 업데이트 됨
+key_dict.update({(x + i, y + j)}) #좌표로써 업데이트 됨
+```
